Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    None

Grammar

Rule 0     S' -> Program
Rule 1     Program -> Declaration
Rule 2     Program -> Program Separator Declaration
Rule 3     Program -> Program Separator Action
Rule 4     Action -> use Id Assign add Prim
Rule 5     Action -> use Id Assign add Tuples
Rule 6     Action -> use Id Assign remove Prim
Rule 7     Action -> use Id Assign remove Tuples
Rule 8     Action -> use Id Assign contains Prim
Rule 9     Action -> use Id Assign contains Tuples
Rule 10    Action -> use Id Assign clear
Rule 11    Action -> use Id Assign get Prim
Rule 12    Action -> use Id Assign get Tuples
Rule 13    Action -> use Id Assign get index Assign Int
Rule 14    Action -> use Id Assign removeAll Prim
Rule 15    Action -> use Id Assign removeAll Tuples
Rule 16    Action -> print Id
Rule 17    Declaration -> InputOptionalStruct LT Elements GT
Rule 18    Declaration -> InputRequiredStruct LT Elements GT
Rule 19    Declaration -> Structures Id Assign LT Elements GT
Rule 20    Declaration -> InputOptionalStruct LT GT
Rule 21    Declaration -> InputRequiredStruct LT GT
Rule 22    Declaration -> Structures Id Assign LT GT
Rule 23    Tuples -> LP Prim Separator Prim RP
Rule 24    Elements -> Prim
Rule 25    Elements -> Elements Separator Elements
Rule 26    Elements -> Tuples
Rule 27    Prim -> Bool
Rule 28    Prim -> Int
Rule 29    Prim -> Id
Rule 30    Prim -> String
Rule 31    Structures -> DLQ
Rule 32    Structures -> Map
Rule 33    Structures -> AL
Rule 34    Structures -> CDLL
Rule 35    Structures -> AS
Rule 36    Structures -> Set
Rule 37    Structures -> Bag
Rule 38    Structures -> SLL
Rule 39    InputRequiredStruct -> Tree Id Assign LP Comparator RP
Rule 40    InputRequiredStruct -> SArrayList Id Assign LP Comparator Separator Comparator RP
Rule 41    InputOptionalStruct -> HSOA Id Assign LP Comparator Separator Comparator RP
Rule 42    InputOptionalStruct -> HSSC Id Assign LP Comparator Separator Comparator RP
Rule 43    InputOptionalStruct -> HSSC Id Assign LP RP
Rule 44    InputOptionalStruct -> HSOA Id Assign LP RP
Rule 45    Comparator -> NumberComp
Rule 46    Comparator -> StringComp
Rule 47    Id -> character
Rule 48    Id -> Id digit
Rule 49    Id -> Id character
Rule 50    Bool -> True
Rule 51    Bool -> False
Rule 52    Int -> digit
Rule 53    Int -> Int digit
Rule 54    String -> Comillas Prim Comillas
Rule 55    String -> Comillas Tuples Comillas

Terminals, with rules where they appear

AL                   : 33
AS                   : 35
Assign               : 4 5 6 7 8 9 10 11 12 13 13 14 15 19 22 39 40 41 42 43 44
Bag                  : 37
CDLL                 : 34
Comillas             : 54 54 55 55
DLQ                  : 31
False                : 51
GT                   : 17 18 19 20 21 22
HSOA                 : 41 44
HSSC                 : 42 43
LP                   : 23 39 40 41 42 43 44
LT                   : 17 18 19 20 21 22
Map                  : 32
None                 : 
NumberComp           : 45
RP                   : 23 39 40 41 42 43 44
SArrayList           : 40
SLL                  : 38
Separator            : 2 3 23 25 40 41 42
Set                  : 36
StringComp           : 46
Tree                 : 39
True                 : 50
add                  : 4 5
character            : 47 49
clear                : 10
contains             : 8 9
digit                : 48 52 53
error                : 
get                  : 11 12 13
index                : 13
print                : 16
remove               : 6 7
removeAll            : 14 15
use                  : 4 5 6 7 8 9 10 11 12 13 14 15

Nonterminals, with rules where they appear

Action               : 3
Bool                 : 27
Comparator           : 39 40 40 41 41 42 42
Declaration          : 1 2
Elements             : 17 18 19 25 25
Id                   : 4 5 6 7 8 9 10 11 12 13 14 15 16 19 22 29 39 40 41 42 43 44 48 49
InputOptionalStruct  : 17 20
InputRequiredStruct  : 18 21
Int                  : 13 28 53
Prim                 : 4 6 8 11 14 23 23 24 54
Program              : 2 3 0
String               : 30
Structures           : 19 22
Tuples               : 5 7 9 12 15 26 55

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . Declaration
    (2) Program -> . Program Separator Declaration
    (3) Program -> . Program Separator Action
    (17) Declaration -> . InputOptionalStruct LT Elements GT
    (18) Declaration -> . InputRequiredStruct LT Elements GT
    (19) Declaration -> . Structures Id Assign LT Elements GT
    (20) Declaration -> . InputOptionalStruct LT GT
    (21) Declaration -> . InputRequiredStruct LT GT
    (22) Declaration -> . Structures Id Assign LT GT
    (41) InputOptionalStruct -> . HSOA Id Assign LP Comparator Separator Comparator RP
    (42) InputOptionalStruct -> . HSSC Id Assign LP Comparator Separator Comparator RP
    (43) InputOptionalStruct -> . HSSC Id Assign LP RP
    (44) InputOptionalStruct -> . HSOA Id Assign LP RP
    (39) InputRequiredStruct -> . Tree Id Assign LP Comparator RP
    (40) InputRequiredStruct -> . SArrayList Id Assign LP Comparator Separator Comparator RP
    (31) Structures -> . DLQ
    (32) Structures -> . Map
    (33) Structures -> . AL
    (34) Structures -> . CDLL
    (35) Structures -> . AS
    (36) Structures -> . Set
    (37) Structures -> . Bag
    (38) Structures -> . SLL

    HSOA            shift and go to state 6
    HSSC            shift and go to state 7
    Tree            shift and go to state 8
    SArrayList      shift and go to state 9
    DLQ             shift and go to state 10
    Map             shift and go to state 11
    AL              shift and go to state 12
    CDLL            shift and go to state 13
    AS              shift and go to state 14
    Set             shift and go to state 15
    Bag             shift and go to state 16
    SLL             shift and go to state 17

    Program                        shift and go to state 1
    Declaration                    shift and go to state 2
    InputOptionalStruct            shift and go to state 3
    InputRequiredStruct            shift and go to state 4
    Structures                     shift and go to state 5

state 1

    (0) S' -> Program .
    (2) Program -> Program . Separator Declaration
    (3) Program -> Program . Separator Action

    Separator       shift and go to state 18


state 2

    (1) Program -> Declaration .

    Separator       reduce using rule 1 (Program -> Declaration .)
    $end            reduce using rule 1 (Program -> Declaration .)


state 3

    (17) Declaration -> InputOptionalStruct . LT Elements GT
    (20) Declaration -> InputOptionalStruct . LT GT

    LT              shift and go to state 19


state 4

    (18) Declaration -> InputRequiredStruct . LT Elements GT
    (21) Declaration -> InputRequiredStruct . LT GT

    LT              shift and go to state 20


state 5

    (19) Declaration -> Structures . Id Assign LT Elements GT
    (22) Declaration -> Structures . Id Assign LT GT
    (47) Id -> . character
    (48) Id -> . Id digit
    (49) Id -> . Id character

    character       shift and go to state 22

    Id                             shift and go to state 21

state 6

    (41) InputOptionalStruct -> HSOA . Id Assign LP Comparator Separator Comparator RP
    (44) InputOptionalStruct -> HSOA . Id Assign LP RP
    (47) Id -> . character
    (48) Id -> . Id digit
    (49) Id -> . Id character

    character       shift and go to state 22

    Id                             shift and go to state 23

state 7

    (42) InputOptionalStruct -> HSSC . Id Assign LP Comparator Separator Comparator RP
    (43) InputOptionalStruct -> HSSC . Id Assign LP RP
    (47) Id -> . character
    (48) Id -> . Id digit
    (49) Id -> . Id character

    character       shift and go to state 22

    Id                             shift and go to state 24

state 8

    (39) InputRequiredStruct -> Tree . Id Assign LP Comparator RP
    (47) Id -> . character
    (48) Id -> . Id digit
    (49) Id -> . Id character

    character       shift and go to state 22

    Id                             shift and go to state 25

state 9

    (40) InputRequiredStruct -> SArrayList . Id Assign LP Comparator Separator Comparator RP
    (47) Id -> . character
    (48) Id -> . Id digit
    (49) Id -> . Id character

    character       shift and go to state 22

    Id                             shift and go to state 26

state 10

    (31) Structures -> DLQ .

    character       reduce using rule 31 (Structures -> DLQ .)


state 11

    (32) Structures -> Map .

    character       reduce using rule 32 (Structures -> Map .)


state 12

    (33) Structures -> AL .

    character       reduce using rule 33 (Structures -> AL .)


state 13

    (34) Structures -> CDLL .

    character       reduce using rule 34 (Structures -> CDLL .)


state 14

    (35) Structures -> AS .

    character       reduce using rule 35 (Structures -> AS .)


state 15

    (36) Structures -> Set .

    character       reduce using rule 36 (Structures -> Set .)


state 16

    (37) Structures -> Bag .

    character       reduce using rule 37 (Structures -> Bag .)


state 17

    (38) Structures -> SLL .

    character       reduce using rule 38 (Structures -> SLL .)


state 18

    (2) Program -> Program Separator . Declaration
    (3) Program -> Program Separator . Action
    (17) Declaration -> . InputOptionalStruct LT Elements GT
    (18) Declaration -> . InputRequiredStruct LT Elements GT
    (19) Declaration -> . Structures Id Assign LT Elements GT
    (20) Declaration -> . InputOptionalStruct LT GT
    (21) Declaration -> . InputRequiredStruct LT GT
    (22) Declaration -> . Structures Id Assign LT GT
    (4) Action -> . use Id Assign add Prim
    (5) Action -> . use Id Assign add Tuples
    (6) Action -> . use Id Assign remove Prim
    (7) Action -> . use Id Assign remove Tuples
    (8) Action -> . use Id Assign contains Prim
    (9) Action -> . use Id Assign contains Tuples
    (10) Action -> . use Id Assign clear
    (11) Action -> . use Id Assign get Prim
    (12) Action -> . use Id Assign get Tuples
    (13) Action -> . use Id Assign get index Assign Int
    (14) Action -> . use Id Assign removeAll Prim
    (15) Action -> . use Id Assign removeAll Tuples
    (16) Action -> . print Id
    (41) InputOptionalStruct -> . HSOA Id Assign LP Comparator Separator Comparator RP
    (42) InputOptionalStruct -> . HSSC Id Assign LP Comparator Separator Comparator RP
    (43) InputOptionalStruct -> . HSSC Id Assign LP RP
    (44) InputOptionalStruct -> . HSOA Id Assign LP RP
    (39) InputRequiredStruct -> . Tree Id Assign LP Comparator RP
    (40) InputRequiredStruct -> . SArrayList Id Assign LP Comparator Separator Comparator RP
    (31) Structures -> . DLQ
    (32) Structures -> . Map
    (33) Structures -> . AL
    (34) Structures -> . CDLL
    (35) Structures -> . AS
    (36) Structures -> . Set
    (37) Structures -> . Bag
    (38) Structures -> . SLL

    use             shift and go to state 29
    print           shift and go to state 30
    HSOA            shift and go to state 6
    HSSC            shift and go to state 7
    Tree            shift and go to state 8
    SArrayList      shift and go to state 9
    DLQ             shift and go to state 10
    Map             shift and go to state 11
    AL              shift and go to state 12
    CDLL            shift and go to state 13
    AS              shift and go to state 14
    Set             shift and go to state 15
    Bag             shift and go to state 16
    SLL             shift and go to state 17

    Declaration                    shift and go to state 27
    Action                         shift and go to state 28
    InputOptionalStruct            shift and go to state 3
    InputRequiredStruct            shift and go to state 4
    Structures                     shift and go to state 5

state 19

    (17) Declaration -> InputOptionalStruct LT . Elements GT
    (20) Declaration -> InputOptionalStruct LT . GT
    (24) Elements -> . Prim
    (25) Elements -> . Elements Separator Elements
    (26) Elements -> . Tuples
    (27) Prim -> . Bool
    (28) Prim -> . Int
    (29) Prim -> . Id
    (30) Prim -> . String
    (23) Tuples -> . LP Prim Separator Prim RP
    (50) Bool -> . True
    (51) Bool -> . False
    (52) Int -> . digit
    (53) Int -> . Int digit
    (47) Id -> . character
    (48) Id -> . Id digit
    (49) Id -> . Id character
    (54) String -> . Comillas Prim Comillas
    (55) String -> . Comillas Tuples Comillas

    GT              shift and go to state 32
    LP              shift and go to state 39
    True            shift and go to state 40
    False           shift and go to state 41
    digit           shift and go to state 42
    character       shift and go to state 22
    Comillas        shift and go to state 43

    Elements                       shift and go to state 31
    Prim                           shift and go to state 33
    Tuples                         shift and go to state 34
    Bool                           shift and go to state 35
    Int                            shift and go to state 36
    Id                             shift and go to state 37
    String                         shift and go to state 38

state 20

    (18) Declaration -> InputRequiredStruct LT . Elements GT
    (21) Declaration -> InputRequiredStruct LT . GT
    (24) Elements -> . Prim
    (25) Elements -> . Elements Separator Elements
    (26) Elements -> . Tuples
    (27) Prim -> . Bool
    (28) Prim -> . Int
    (29) Prim -> . Id
    (30) Prim -> . String
    (23) Tuples -> . LP Prim Separator Prim RP
    (50) Bool -> . True
    (51) Bool -> . False
    (52) Int -> . digit
    (53) Int -> . Int digit
    (47) Id -> . character
    (48) Id -> . Id digit
    (49) Id -> . Id character
    (54) String -> . Comillas Prim Comillas
    (55) String -> . Comillas Tuples Comillas

    GT              shift and go to state 45
    LP              shift and go to state 39
    True            shift and go to state 40
    False           shift and go to state 41
    digit           shift and go to state 42
    character       shift and go to state 22
    Comillas        shift and go to state 43

    Elements                       shift and go to state 44
    Prim                           shift and go to state 33
    Tuples                         shift and go to state 34
    Bool                           shift and go to state 35
    Int                            shift and go to state 36
    Id                             shift and go to state 37
    String                         shift and go to state 38

state 21

    (19) Declaration -> Structures Id . Assign LT Elements GT
    (22) Declaration -> Structures Id . Assign LT GT
    (48) Id -> Id . digit
    (49) Id -> Id . character

    Assign          shift and go to state 46
    digit           shift and go to state 47
    character       shift and go to state 48


state 22

    (47) Id -> character .

    Assign          reduce using rule 47 (Id -> character .)
    digit           reduce using rule 47 (Id -> character .)
    character       reduce using rule 47 (Id -> character .)
    GT              reduce using rule 47 (Id -> character .)
    Separator       reduce using rule 47 (Id -> character .)
    $end            reduce using rule 47 (Id -> character .)
    Comillas        reduce using rule 47 (Id -> character .)
    RP              reduce using rule 47 (Id -> character .)


state 23

    (41) InputOptionalStruct -> HSOA Id . Assign LP Comparator Separator Comparator RP
    (44) InputOptionalStruct -> HSOA Id . Assign LP RP
    (48) Id -> Id . digit
    (49) Id -> Id . character

    Assign          shift and go to state 49
    digit           shift and go to state 47
    character       shift and go to state 48


state 24

    (42) InputOptionalStruct -> HSSC Id . Assign LP Comparator Separator Comparator RP
    (43) InputOptionalStruct -> HSSC Id . Assign LP RP
    (48) Id -> Id . digit
    (49) Id -> Id . character

    Assign          shift and go to state 50
    digit           shift and go to state 47
    character       shift and go to state 48


state 25

    (39) InputRequiredStruct -> Tree Id . Assign LP Comparator RP
    (48) Id -> Id . digit
    (49) Id -> Id . character

    Assign          shift and go to state 51
    digit           shift and go to state 47
    character       shift and go to state 48


state 26

    (40) InputRequiredStruct -> SArrayList Id . Assign LP Comparator Separator Comparator RP
    (48) Id -> Id . digit
    (49) Id -> Id . character

    Assign          shift and go to state 52
    digit           shift and go to state 47
    character       shift and go to state 48


state 27

    (2) Program -> Program Separator Declaration .

    Separator       reduce using rule 2 (Program -> Program Separator Declaration .)
    $end            reduce using rule 2 (Program -> Program Separator Declaration .)


state 28

    (3) Program -> Program Separator Action .

    Separator       reduce using rule 3 (Program -> Program Separator Action .)
    $end            reduce using rule 3 (Program -> Program Separator Action .)


state 29

    (4) Action -> use . Id Assign add Prim
    (5) Action -> use . Id Assign add Tuples
    (6) Action -> use . Id Assign remove Prim
    (7) Action -> use . Id Assign remove Tuples
    (8) Action -> use . Id Assign contains Prim
    (9) Action -> use . Id Assign contains Tuples
    (10) Action -> use . Id Assign clear
    (11) Action -> use . Id Assign get Prim
    (12) Action -> use . Id Assign get Tuples
    (13) Action -> use . Id Assign get index Assign Int
    (14) Action -> use . Id Assign removeAll Prim
    (15) Action -> use . Id Assign removeAll Tuples
    (47) Id -> . character
    (48) Id -> . Id digit
    (49) Id -> . Id character

    character       shift and go to state 22

    Id                             shift and go to state 53

state 30

    (16) Action -> print . Id
    (47) Id -> . character
    (48) Id -> . Id digit
    (49) Id -> . Id character

    character       shift and go to state 22

    Id                             shift and go to state 54

state 31

    (17) Declaration -> InputOptionalStruct LT Elements . GT
    (25) Elements -> Elements . Separator Elements

    GT              shift and go to state 55
    Separator       shift and go to state 56


state 32

    (20) Declaration -> InputOptionalStruct LT GT .

    Separator       reduce using rule 20 (Declaration -> InputOptionalStruct LT GT .)
    $end            reduce using rule 20 (Declaration -> InputOptionalStruct LT GT .)


state 33

    (24) Elements -> Prim .

    GT              reduce using rule 24 (Elements -> Prim .)
    Separator       reduce using rule 24 (Elements -> Prim .)


state 34

    (26) Elements -> Tuples .

    GT              reduce using rule 26 (Elements -> Tuples .)
    Separator       reduce using rule 26 (Elements -> Tuples .)


state 35

    (27) Prim -> Bool .

    GT              reduce using rule 27 (Prim -> Bool .)
    Separator       reduce using rule 27 (Prim -> Bool .)
    Comillas        reduce using rule 27 (Prim -> Bool .)
    RP              reduce using rule 27 (Prim -> Bool .)
    $end            reduce using rule 27 (Prim -> Bool .)


state 36

    (28) Prim -> Int .
    (53) Int -> Int . digit

    GT              reduce using rule 28 (Prim -> Int .)
    Separator       reduce using rule 28 (Prim -> Int .)
    Comillas        reduce using rule 28 (Prim -> Int .)
    RP              reduce using rule 28 (Prim -> Int .)
    $end            reduce using rule 28 (Prim -> Int .)
    digit           shift and go to state 57


state 37

    (29) Prim -> Id .
    (48) Id -> Id . digit
    (49) Id -> Id . character

    GT              reduce using rule 29 (Prim -> Id .)
    Separator       reduce using rule 29 (Prim -> Id .)
    Comillas        reduce using rule 29 (Prim -> Id .)
    RP              reduce using rule 29 (Prim -> Id .)
    $end            reduce using rule 29 (Prim -> Id .)
    digit           shift and go to state 47
    character       shift and go to state 48


state 38

    (30) Prim -> String .

    GT              reduce using rule 30 (Prim -> String .)
    Separator       reduce using rule 30 (Prim -> String .)
    Comillas        reduce using rule 30 (Prim -> String .)
    RP              reduce using rule 30 (Prim -> String .)
    $end            reduce using rule 30 (Prim -> String .)


state 39

    (23) Tuples -> LP . Prim Separator Prim RP
    (27) Prim -> . Bool
    (28) Prim -> . Int
    (29) Prim -> . Id
    (30) Prim -> . String
    (50) Bool -> . True
    (51) Bool -> . False
    (52) Int -> . digit
    (53) Int -> . Int digit
    (47) Id -> . character
    (48) Id -> . Id digit
    (49) Id -> . Id character
    (54) String -> . Comillas Prim Comillas
    (55) String -> . Comillas Tuples Comillas

    True            shift and go to state 40
    False           shift and go to state 41
    digit           shift and go to state 42
    character       shift and go to state 22
    Comillas        shift and go to state 43

    Prim                           shift and go to state 58
    Bool                           shift and go to state 35
    Int                            shift and go to state 36
    Id                             shift and go to state 37
    String                         shift and go to state 38

state 40

    (50) Bool -> True .

    GT              reduce using rule 50 (Bool -> True .)
    Separator       reduce using rule 50 (Bool -> True .)
    Comillas        reduce using rule 50 (Bool -> True .)
    RP              reduce using rule 50 (Bool -> True .)
    $end            reduce using rule 50 (Bool -> True .)


state 41

    (51) Bool -> False .

    GT              reduce using rule 51 (Bool -> False .)
    Separator       reduce using rule 51 (Bool -> False .)
    Comillas        reduce using rule 51 (Bool -> False .)
    RP              reduce using rule 51 (Bool -> False .)
    $end            reduce using rule 51 (Bool -> False .)


state 42

    (52) Int -> digit .

    digit           reduce using rule 52 (Int -> digit .)
    GT              reduce using rule 52 (Int -> digit .)
    Separator       reduce using rule 52 (Int -> digit .)
    Comillas        reduce using rule 52 (Int -> digit .)
    RP              reduce using rule 52 (Int -> digit .)
    $end            reduce using rule 52 (Int -> digit .)


state 43

    (54) String -> Comillas . Prim Comillas
    (55) String -> Comillas . Tuples Comillas
    (27) Prim -> . Bool
    (28) Prim -> . Int
    (29) Prim -> . Id
    (30) Prim -> . String
    (23) Tuples -> . LP Prim Separator Prim RP
    (50) Bool -> . True
    (51) Bool -> . False
    (52) Int -> . digit
    (53) Int -> . Int digit
    (47) Id -> . character
    (48) Id -> . Id digit
    (49) Id -> . Id character
    (54) String -> . Comillas Prim Comillas
    (55) String -> . Comillas Tuples Comillas

    LP              shift and go to state 39
    True            shift and go to state 40
    False           shift and go to state 41
    digit           shift and go to state 42
    character       shift and go to state 22
    Comillas        shift and go to state 43

    Prim                           shift and go to state 59
    Tuples                         shift and go to state 60
    Bool                           shift and go to state 35
    Int                            shift and go to state 36
    Id                             shift and go to state 37
    String                         shift and go to state 38

state 44

    (18) Declaration -> InputRequiredStruct LT Elements . GT
    (25) Elements -> Elements . Separator Elements

    GT              shift and go to state 61
    Separator       shift and go to state 56


state 45

    (21) Declaration -> InputRequiredStruct LT GT .

    Separator       reduce using rule 21 (Declaration -> InputRequiredStruct LT GT .)
    $end            reduce using rule 21 (Declaration -> InputRequiredStruct LT GT .)


state 46

    (19) Declaration -> Structures Id Assign . LT Elements GT
    (22) Declaration -> Structures Id Assign . LT GT

    LT              shift and go to state 62


state 47

    (48) Id -> Id digit .

    Assign          reduce using rule 48 (Id -> Id digit .)
    digit           reduce using rule 48 (Id -> Id digit .)
    character       reduce using rule 48 (Id -> Id digit .)
    GT              reduce using rule 48 (Id -> Id digit .)
    Separator       reduce using rule 48 (Id -> Id digit .)
    $end            reduce using rule 48 (Id -> Id digit .)
    Comillas        reduce using rule 48 (Id -> Id digit .)
    RP              reduce using rule 48 (Id -> Id digit .)


state 48

    (49) Id -> Id character .

    Assign          reduce using rule 49 (Id -> Id character .)
    digit           reduce using rule 49 (Id -> Id character .)
    character       reduce using rule 49 (Id -> Id character .)
    GT              reduce using rule 49 (Id -> Id character .)
    Separator       reduce using rule 49 (Id -> Id character .)
    $end            reduce using rule 49 (Id -> Id character .)
    Comillas        reduce using rule 49 (Id -> Id character .)
    RP              reduce using rule 49 (Id -> Id character .)


state 49

    (41) InputOptionalStruct -> HSOA Id Assign . LP Comparator Separator Comparator RP
    (44) InputOptionalStruct -> HSOA Id Assign . LP RP

    LP              shift and go to state 63


state 50

    (42) InputOptionalStruct -> HSSC Id Assign . LP Comparator Separator Comparator RP
    (43) InputOptionalStruct -> HSSC Id Assign . LP RP

    LP              shift and go to state 64


state 51

    (39) InputRequiredStruct -> Tree Id Assign . LP Comparator RP

    LP              shift and go to state 65


state 52

    (40) InputRequiredStruct -> SArrayList Id Assign . LP Comparator Separator Comparator RP

    LP              shift and go to state 66


state 53

    (4) Action -> use Id . Assign add Prim
    (5) Action -> use Id . Assign add Tuples
    (6) Action -> use Id . Assign remove Prim
    (7) Action -> use Id . Assign remove Tuples
    (8) Action -> use Id . Assign contains Prim
    (9) Action -> use Id . Assign contains Tuples
    (10) Action -> use Id . Assign clear
    (11) Action -> use Id . Assign get Prim
    (12) Action -> use Id . Assign get Tuples
    (13) Action -> use Id . Assign get index Assign Int
    (14) Action -> use Id . Assign removeAll Prim
    (15) Action -> use Id . Assign removeAll Tuples
    (48) Id -> Id . digit
    (49) Id -> Id . character

    Assign          shift and go to state 67
    digit           shift and go to state 47
    character       shift and go to state 48


state 54

    (16) Action -> print Id .
    (48) Id -> Id . digit
    (49) Id -> Id . character
